--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,10 @@ version: '3.8'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8090
+    command: >
+      bash -c "python3.9 manage.py makemigrations &&
+               python3.9 manage.py migrate &&
+               python3.9 manage.py runserver 0.0.0.0:8090"
     volumes:
       - .:/app
     ports:
@@ -11,14 +14,41 @@ services:
     environment:
       - DEBUG=1
       - DJANGO_SETTINGS_MODULE=deepgis_xr.settings
+      - POSTGRES_DB=gis_db
+      - POSTGRES_USER=gis_user
+      - POSTGRES_PASSWORD=gis_password
+      - POSTGRES_HOST=db
+      - REDIS_URL=redis://redis:6379/0
+      - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
+      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN}
+      - TWILIO_PHONE_NUMBER=${TWILIO_PHONE_NUMBER}
     depends_on:
-      - redis
-      - celery
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+
+  db:
+    image: postgis/postgis:13-3.3
+    environment:
+      - POSTGRES_DB=gis_db
+      - POSTGRES_USER=gis_user
+      - POSTGRES_PASSWORD=gis_password
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U gis_user -d gis_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:latest
     ports:
       - "6379:6379"
+    command: redis-server --appendonly yes
 
   celery:
     build: .
@@ -28,5 +58,13 @@ services:
     environment:
       - DEBUG=1
       - DJANGO_SETTINGS_MODULE=deepgis_xr.settings
+      - REDIS_URL=redis://redis:6379/0
+      - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
+      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN}
+      - TWILIO_PHONE_NUMBER=${TWILIO_PHONE_NUMBER}
     depends_on:
-      - redis 
+      - redis
+      - db
+
+volumes:
+  postgres_data: 
