--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,16 @@ services:
   web:
     build: .
     command: >
-      bash -c "python3.9 manage.py makemigrations &&
-               python3.9 manage.py migrate &&
-               python3.9 manage.py runserver 0.0.0.0:8090"
+      bash -c "
+        python3.9 manage.py makemigrations &&
+        python3.9 manage.py migrate auth &&
+        python3.9 manage.py migrate contenttypes &&
+        python3.9 manage.py migrate admin &&
+        python3.9 manage.py migrate sessions &&
+        python3.9 manage.py migrate deepgis_auth &&
+        python3.9 manage.py migrate &&
+        python3.9 manage.py runserver 0.0.0.0:8090
+      "
     volumes:
       - .:/app
     ports:
