--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,10 @@ services:
       "
     volumes:
       - .:/app
-    ports:
-      - "8090:8090"
+      - static_volume:/app/static
+      - media_volume:/app/media
+    expose:
+      - 8090
     environment:
       - DEBUG=1
       - DJANGO_SETTINGS_MODULE=deepgis_xr.settings
@@ -35,6 +37,17 @@ services:
       redis:
         condition: service_started
 
+  nginx:
+    image: nginx:1.25
+    volumes:
+      - ./nginx/dreamslab.deepgis.org.conf:/etc/nginx/conf.d/default.conf
+      - ./deepgis_xr/static:/app/deepgis_xr/static
+      - media_volume:/app/media
+    ports:
+      - "8090:80"
+    depends_on:
+      - web
+
   db:
     image: postgis/postgis:13-3.3
     environment:
@@ -43,8 +56,8 @@ services:
       - POSTGRES_PASSWORD=gis_password
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    expose:
+      - 5432
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U gis_user -d gis_db"]
       interval: 5s
@@ -53,8 +66,8 @@ services:
 
   redis:
     image: redis:latest
-    ports:
-      - "6379:6379"
+    expose:
+      - 6379
     command: redis-server --appendonly yes
 
   celery:
@@ -74,4 +87,6 @@ services:
       - db
 
 volumes:
-  postgres_data: 
+  postgres_data:
+  static_volume:
+  media_volume: 
