--- a/nginx/dreamslab.deepgis.org.conf
+++ b/nginx/dreamslab.deepgis.org.conf
@@ -1,20 +1,84 @@
+# Define upstream servers
+upstream deepgis_xr_django {
+    server web:8090;
+    keepalive 32;  # Keep connections alive
+}
+
+upstream dreamslab_django {
+    server 127.0.0.1:8090;
+    keepalive 32;
+}
+
+# HTTP Server Configuration for dreamslab.deepgis.org
 server {
     listen 80;
     server_name dreamslab.deepgis.org;
 
+    # All other paths go to Django
     location / {
-        proxy_pass http://127.0.0.1:8090;
+        proxy_pass http://dreamslab_django;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Additional proxy settings
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+        proxy_read_timeout 60s;
+        proxy_connect_timeout 60s;
     }
 
     location /static/ {
         alias /app/static/;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
     }
 
     location /media/ {
         alias /app/media/;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
     }
-} 
+}
+
+# HTTP Server Configuration for xr.deepgis.org
+server {
+    listen 80 default_server;
+    server_name xr.deepgis.org localhost 192.168.0.198;
+
+    # Add debug logging
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log combined;
+
+    # Static files
+    location /static/ {
+        alias /app/deepgis_xr/static/;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    # Media files
+    location /media/ {
+        alias /app/media/;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    # Main application
+    location / {
+        proxy_pass http://deepgis_xr_django;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Additional proxy settings
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+        proxy_read_timeout 60s;
+        proxy_connect_timeout 60s;
+    }
+}
