--- a/nginx/dreamslab.deepgis.org.conf
+++ b/nginx/dreamslab.deepgis.org.conf
@@ -46,7 +46,7 @@ server {
 # HTTP Server Configuration for xr.deepgis.org
 server {
     listen 80 default_server;
-    server_name xr.deepgis.org localhost 192.168.0.198;
+    server_name xr.deepgis.org;
 
     # Add debug logging
     error_log /var/log/nginx/error.log debug;
