--- a/nginx/dreamslab.deepgis.org.conf
+++ b/nginx/dreamslab.deepgis.org.conf
@@ -4,11 +4,6 @@ upstream deepgis_xr_django {
     keepalive 32;  # Keep connections alive
 }
 
-upstream dreamslab_django {
-    server 127.0.0.1:8090;
-    keepalive 32;
-}
-
 # HTTP Server Configuration for dreamslab.deepgis.org
 server {
     listen 80;
@@ -16,7 +11,7 @@ server {
 
     # All other paths go to Django
     location / {
-        proxy_pass http://dreamslab_django;
+        proxy_pass http://deepgis_xr_django;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -28,18 +23,74 @@ server {
         proxy_buffers 8 4k;
         proxy_read_timeout 60s;
         proxy_connect_timeout 60s;
+
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
     }
 
     location /static/ {
         alias /app/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        add_header Access-Control-Allow-Origin "*" always;
+        add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range" always;
+        add_header Access-Control-Expose-Headers "Content-Length,Content-Range" always;
+        
+        # Handle different file types
+        location ~* \.css$ {
+            add_header Content-Type "text/css";
+        }
+        location ~* \.js$ {
+            add_header Content-Type "application/javascript";
+        }
+        location ~* \.(png|jpg|jpeg|gif)$ {
+            add_header Content-Type "image/png";
+            try_files $uri $uri/ =404;
+            access_log off;
+            log_not_found off;
+            expires max;
+        }
+
+        # Special handling for rock-tiles
+        location ^~ /static/rock-tiles/ {
+            alias /app/static/rock-tiles/;
+            autoindex on;
+            try_files $uri $uri/ =404;
+            access_log off;
+            log_not_found off;
+            expires max;
+        }
     }
 
     location /media/ {
         alias /app/media/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+    }
+
+    # Handle tileserver proxy
+    location /tiles/ {
+        proxy_pass http://tileserver/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
     }
 }
 
@@ -57,6 +108,13 @@ server {
         alias /app/deepgis_xr/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        add_header Content-Type "text/css";
+        
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
     }
 
     # Media files
@@ -64,6 +122,12 @@ server {
         alias /app/media/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
     }
 
     # Main application
@@ -80,5 +144,11 @@ server {
         proxy_buffers 8 4k;
         proxy_read_timeout 60s;
         proxy_connect_timeout 60s;
+
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
     }
 }
