--- a/nginx/dreamslab.deepgis.org.conf
+++ b/nginx/dreamslab.deepgis.org.conf
@@ -9,6 +9,10 @@ server {
     listen 80;
     server_name dreamslab.deepgis.org;
 
+    # Include MIME types
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     # All other paths go to Django
     location / {
         proxy_pass http://deepgis_xr_django;
@@ -35,33 +39,33 @@ server {
         alias /app/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
-        add_header Access-Control-Allow-Origin "*" always;
-        add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range" always;
-        add_header Access-Control-Expose-Headers "Content-Length,Content-Range" always;
         
-        # Handle different file types
-        location ~* \.css$ {
-            add_header Content-Type "text/css";
-        }
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+
+        # Handle JavaScript files
         location ~* \.js$ {
-            add_header Content-Type "application/javascript";
-        }
-        location ~* \.(png|jpg|jpeg|gif)$ {
-            add_header Content-Type "image/png";
-            try_files $uri $uri/ =404;
+            try_files $uri =404;
+            add_header Content-Type "application/javascript; charset=utf-8";
             access_log off;
-            log_not_found off;
             expires max;
         }
 
-        # Special handling for rock-tiles
-        location ^~ /static/rock-tiles/ {
-            alias /app/static/rock-tiles/;
-            autoindex on;
-            try_files $uri $uri/ =404;
+        # Handle CSS files
+        location ~* \.css$ {
+            try_files $uri =404;
+            add_header Content-Type "text/css; charset=utf-8";
             access_log off;
-            log_not_found off;
+            expires max;
+        }
+
+        # Handle image files
+        location ~* \.(png|jpg|jpeg|gif|ico)$ {
+            try_files $uri =404;
+            access_log off;
             expires max;
         }
     }
