Fixed nginx configuration for map-label view and proper port routing. Added proper SSL/HTTPS support with correct proxy settings for both Dreams Lab website and DeepGIS XR

--- a/nginx/tileserver.conf
+++ b/nginx/tileserver.conf
@@ -2,53 +2,11 @@ server {
     listen 80;
     server_name localhost;
 
-    # Enable directory listing
-    autoindex on;
-    
-    # Set proper MIME types
-    types {
-        image/png png;
+    location / {
+        root /usr/share/nginx/html/tiles;
+        autoindex on;
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
     }
-
-    # Global CORS settings
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-    add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
-
-    location /tiles/ {
-        alias /usr/share/nginx/html/tiles/;
-        
-        # Enable caching
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-        
-        # Log access and errors
-        access_log /var/log/nginx/tiles_access.log;
-        error_log /var/log/nginx/tiles_error.log;
-
-        # Handle OPTIONS request
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain; charset=utf-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
-
-        # Try to serve the tile, return transparent PNG if not found
-        try_files $uri /tiles/empty.png =404;
-    }
-
-    location = /tiles/empty.png {
-        alias /usr/share/nginx/html/empty.png;
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        expires 30d;
-    }
-
-    location = / {
-        return 200 'Tile Server';
-    }
-} 
+}
