--- a/nginx/dreamslab.deepgis.org.conf
+++ b/nginx/dreamslab.deepgis.org.conf
@@ -1,124 +1,17 @@
-# Define upstream servers
-upstream deepgis_xr_django {
+upstream django_app {
     server web:8090;
-    keepalive 32;  # Keep connections alive
 }
 
-# HTTP Server Configuration for dreamslab.deepgis.org
 server {
     listen 80;
-    server_name dreamslab.deepgis.org;
+    server_name localhost dreamslab.deepgis.org;
+    client_max_body_size 100M;
 
-    # Include MIME types
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
-    # All other paths go to Django
-    location / {
-        proxy_pass http://deepgis_xr_django;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Additional proxy settings
-        proxy_buffering on;
-        proxy_buffer_size 4k;
-        proxy_buffers 8 4k;
-        proxy_read_timeout 60s;
-        proxy_connect_timeout 60s;
-
-        # CORS headers
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
-    }
-
+    # Static files
     location /static/ {
         alias /app/static/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
-        
-        # CORS headers
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
-
-        # Handle JavaScript files
-        location ~* \.js$ {
-            try_files $uri =404;
-            add_header Content-Type "application/javascript; charset=utf-8";
-            access_log off;
-            expires max;
-        }
-
-        # Handle CSS files
-        location ~* \.css$ {
-            try_files $uri =404;
-            add_header Content-Type "text/css; charset=utf-8";
-            access_log off;
-            expires max;
-        }
-
-        # Handle image files
-        location ~* \.(png|jpg|jpeg|gif|ico)$ {
-            try_files $uri =404;
-            access_log off;
-            expires max;
-        }
-    }
-
-    location /media/ {
-        alias /app/media/;
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-        
-        # CORS headers
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
-    }
-
-    # Handle tileserver proxy
-    location /tiles/ {
-        proxy_pass http://tileserver/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # CORS headers
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
-    }
-}
-
-# HTTP Server Configuration for xr.deepgis.org
-server {
-    listen 80 default_server;
-    server_name xr.deepgis.org;
-
-    # Add debug logging
-    error_log /var/log/nginx/error.log debug;
-    access_log /var/log/nginx/access.log combined;
-
-    # Static files
-    location /static/ {
-        alias /app/deepgis_xr/static/;
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-        add_header Content-Type "text/css";
-        
-        # CORS headers
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
     }
 
     # Media files
@@ -126,33 +19,31 @@ server {
         alias /app/media/;
         expires 30d;
         add_header Cache-Control "public, no-transform";
-        
-        # CORS headers
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
     }
 
-    # Main application
+    # Proxy all other requests to Django
     location / {
-        proxy_pass http://deepgis_xr_django;
+        proxy_pass http://django_app;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Additional proxy settings
-        proxy_buffering on;
-        proxy_buffer_size 4k;
-        proxy_buffers 8 4k;
-        proxy_read_timeout 60s;
-        proxy_connect_timeout 60s;
+        proxy_redirect off;
+        proxy_buffering off;
+        proxy_connect_timeout 90s;
+        proxy_read_timeout 90s;
+        proxy_send_timeout 90s;
+    }
 
-        # CORS headers
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+    # WebSocket support (if needed)
+    location /ws/ {
+        proxy_pass http://django_app;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
