--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,7 @@ services:
         python3.9 manage.py migrate deepgis_auth &&
         python3.9 manage.py migrate &&
         python3.9 manage.py collectstatic --noinput &&
-        python3.9 manage.py runserver 0.0.0.0:8090
-      "
+        python3.9 manage.py runserver 0.0.0.0:8060"
     volumes:
       - .:/app
       - ./static:/app/static
@@ -24,8 +23,8 @@ services:
       - /mnt/2tbc2000mx500ssd/deepgis/deepgis_rocks/rocks-coord-list.csv:/app/static/rocks-coord-list.csv
       - /mnt/2tbc2000mx500ssd/deepgis/deepgis_rocks_static_serving_nginx/static/rock-tiles:/app/static/rock-tiles
       - media_volume:/app/media
-    expose:
-      - 8090
+    ports:
+      - "8060:8060"
     environment:
       - DEBUG=1
       - DJANGO_SETTINGS_MODULE=deepgis_xr.settings
@@ -42,17 +41,6 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
-
-  nginx:
-    image: nginx:1.25
-    volumes:
-      - ./nginx/dreamslab.deepgis.org.conf:/etc/nginx/conf.d/default.conf
-      - ./deepgis_xr/static:/app/deepgis_xr/static
-      - media_volume:/app/media
-    ports:
-      - "8060:80"
-    depends_on:
-      - web
 
   db:
     image: postgis/postgis:13-3.3
@@ -98,23 +86,14 @@ services:
       - "8091:80"
     volumes:
       - ./static/rock-tiles/mbtiles:/data/mbtiles
-      - ./static/rock-tiles/raw:/data/raw
+      - ./static/rock-tiles/styles:/data/styles
+      - ./static/rock-tiles/config.json:/data/config.json
     environment:
       - CORS_ENABLED=true
       - TILESERVER_GL_DATA_PATH=/data
-    command: ["-p", "80", "--verbose"]
-    restart: unless-stopped
-
-  tileserver-static:
-    image: nginx:alpine
-    ports:
-      - "8092:80"
-    volumes:
-      - ./static/rock-tiles/raw:/usr/share/nginx/html/tiles
-      - ./nginx/tileserver.conf:/etc/nginx/conf.d/default.conf
+    command: ["-c", "/data/config.json", "-p", "80", "--verbose"]
     restart: unless-stopped
 
 volumes:
   postgres_data:
-  static_volume:
   media_volume: 
