--- a/config.json
+++ b/config.json
@@ -16,39 +16,5 @@
     "serveStaticMaps": true
   },
   "styles": {},
-  "data": {
-    "v3": {
-      "mbtiles": "C3-29.mbtiles"
-    },
-    "v3color": {
-      "mbtiles": "C3color.mbtiles"
-    },
-    "bf_latest": {
-      "mbtiles": "BF_2-15-2021_3d_43.mbtiles"
-    },
-    "bf_vector": {
-      "mbtiles": "BF_12-20-2020_vector.mbtiles"
-    },
-    "landsat_combined": {
-      "mbtiles": "Landsat_1_2_3.mbtiles"
-    },
-    "kmeans": {
-      "mbtiles": "Kmeans3_11_iters.mbtiles"
-    },
-    "rock_poly": {
-      "mbtiles": "rockPoly_all_v0.mbtiles"
-    },
-    "merged_crowns": {
-      "mbtiles": "merged_crowns.mbtiles"
-    },
-    "raw": {
-      "source": "raw",
-      "type": "raster",
-      "tilejson": {
-        "bounds": [-118.44343861773824, 37.45011551294956, -118.44097262091682, 37.45473901564029],
-        "minzoom": 15,
-        "maxzoom": 23
-      }
-    }
-  }
+  "data": {}
 } 
