--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,105 +1,33 @@
-version: '3.8'
+version: '3.9'
 
 services:
   web:
-    build: .
-    command: >
-      bash -c "
-        python3.9 manage.py makemigrations &&
-        python3.9 manage.py migrate auth &&
-        python3.9 manage.py migrate contenttypes &&
-        python3.9 manage.py migrate admin &&
-        python3.9 manage.py migrate sessions &&
-        python3.9 manage.py migrate deepgis_auth &&
-        python3.9 manage.py migrate &&
-        python3.9 manage.py collectstatic --noinput &&
-        python3.9 manage.py runserver 0.0.0.0:8090
-      "
+    build:
+      context: .
+    environment:
+      - DEBUG=True
+      - DJANGO_SETTINGS_MODULE=deepgis_xr.settings
     volumes:
       - .:/app
-      - ./static:/app/static
       - media_volume:/app/media
     ports:
       - "8060:8090"
-    environment:
-      - DEBUG=1
-      - DJANGO_SETTINGS_MODULE=deepgis_xr.settings
-      - POSTGRES_DB=gis_db
-      - POSTGRES_USER=gis_user
-      - POSTGRES_PASSWORD=gis_password
-      - POSTGRES_HOST=db
-      - REDIS_URL=redis://redis:6379/0
-      - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
-      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN}
-      - TWILIO_PHONE_NUMBER=${TWILIO_PHONE_NUMBER}
-    depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_started
-
-  db:
-    image: postgis/postgis:13-3.3
-    environment:
-      - POSTGRES_DB=gis_db
-      - POSTGRES_USER=gis_user
-      - POSTGRES_PASSWORD=gis_password
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    expose:
-      - 5432
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U gis_user -d gis_db"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-
-  redis:
-    image: redis:latest
-    expose:
-      - 6379
-    command: redis-server --appendonly yes
-
-  celery:
-    build: .
-    command: celery -A deepgis_xr worker -l INFO
-    volumes:
-      - .:/app
-    environment:
-      - DEBUG=1
-      - DJANGO_SETTINGS_MODULE=deepgis_xr.settings
-      - REDIS_URL=redis://redis:6379/0
-      - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
-      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN}
-      - TWILIO_PHONE_NUMBER=${TWILIO_PHONE_NUMBER}
-    depends_on:
-      - redis
-      - db
+    command: >
+      bash -c "
+        python manage.py migrate &&
+        python manage.py runserver 0.0.0.0:8090
+      "
 
   tileserver:
     image: maptiler/tileserver-gl
     ports:
       - "8091:80"
     volumes:
-      - ./static/rock-tiles/mbtiles:/data/mbtiles
-      - ./static/rock-tiles/raw:/data/raw
-      - ./config.json:/data/config.json
+      - ./data:/data
     environment:
       - CORS_ENABLED=true
       - TILESERVER_GL_DATA_PATH=/data
     command: ["-p", "80", "--verbose"]
-    restart: unless-stopped
-
-  tileserver-static:
-    image: nginx:alpine
-    ports:
-      - "8092:80"
-    volumes:
-      - ./static/rock-tiles/raw:/usr/share/nginx/html/tiles
-      - ./nginx/tileserver.conf:/etc/nginx/conf.d/default.conf
-    restart: unless-stopped
 
 volumes:
-  postgres_data:
-  static_volume:
   media_volume: 
