--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ scikit-image>=0.19.0
 twilio>=8.10.0
 django-phonenumber-field>=7.3.0
 phonenumbers>=8.13.27
+opencv-python>=4.5.0
 
 # GIS dependencies
 fiona==1.9.1
